--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,14 +1,11 @@
 # application.conf
-
+//TODO: разобраться с хранением секретов
 persistence {
   dataSourceClassName = org.postgresql.ds.PGSimpleDataSource
   dataSource {
-    url = ${?PG_URL}
+    url = "jdbc:postgresql://ycvmhost:5432/postgres?currentSchema=public"
     user = "postgres"
-    #user = ${?PG_USER}
     password = "Super-Secret13-l"
-    #password = ${?PG_PASSWORD}
-
   }
   maximumPoolSize = 5
 }
