completed to graduate

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,9 +3,9 @@
 persistence {
   dataSourceClassName = org.postgresql.ds.PGSimpleDataSource
   dataSource {
-    url = "jdbc:postgresql://ycvmhost:5432/postgres?currentSchema=public"
-    user = "postgres"
-    password = "Super-Secret13-l"
+    url = ""
+    user = ""
+    password = ""
   }
   maximumPoolSize = 5
 }
